refactor: Enhancement for API server
* Make user headers configurable and hide them for the time being. This will enable the operators to use multiple user headers to fetch username from depending on their needs and deployment. For the moment, the default is `X-Grafana-User` which will ensure compatability.

* Add support for CORS by adding a new CLI argument to configure CORS origins

* Use `User` struct to store admin users as well. Setup migrations to convert existing tables into new schema. Insert source of admin users as tags. This will enable us to support cluster based admin users as well in the future.

* Move all the `web` related configuration for API server from config file to CLI. It will be more consistent with Prometheus API and easy to manage all the config from one place.
